# esp-claw

./: AGENTS.md  CHANGELOG.md
.agents/spec/: claw-skill-spec.md
.gitlab/ci/: build.yml
application/edge_agent/: CMakeLists.txt  README.md  sdkconfig.defaults
application/edge_agent/boards/Nologo.Tech/xingzhi_cube_0_96oled_wifi/: board_devices.yaml  board_info.yaml  board_peripherals.yaml  sdkconfig.defaults.board  setup_device.c
application/edge_agent/components/http_server/: CMakeLists.txt
application/edge_agent/components/http_server/frontend_source/src/i18n/: en.ts  zh-cn.ts
application/edge_agent/components/http_server/frontend_source/src/pages/: FilesPage.tsx
application/edge_agent/main/: idf_component.yml  main.c
application/edge_agent/tools/cmake/: patch_generated_board_config.cmake
components/claw_capabilities/cap_files/: CMakeLists.txt
components/claw_capabilities/cap_http_request/skills/cap_http_request/: SKILL.md
components/claw_capabilities/cap_http_request/src/: cap_http_request.c
components/claw_capabilities/cap_im_platform/: idf_component.yml
components/claw_capabilities/cap_lua/src/: cap_lua.c  cap_lua_internal.h  cap_lua_runtime.c
components/claw_capabilities/cap_web_search/src/: cap_web_search.c
components/claw_modules/claw_core/: CMakeLists.txt
components/claw_modules/claw_skill/src/: claw_skill.c
components/common/app_claw/: CMakeLists.txt  app_capabilities.c
components/common/lua_module_builder/tools/: generate_builtin_modules_skill.py
components/common/skill_builder/skills/skill_creator/references/: write_lua.md
components/common/skill_builder/skills/skills_lab_downloader/: SKILL.md
components/lua_modules/lua_driver_i2c/: CMakeLists.txt  README.md
components/lua_modules/lua_driver_i2c/src/: lua_driver_i2c.c
components/lua_modules/lua_driver_touch/src/: lua_driver_touch.c
components/lua_modules/lua_module_camera/: README.md
components/lua_modules/lua_module_camera/src/: camera_hal.c
components/lua_modules/lua_module_camera/test/: camera_capabilities.lua
components/lua_modules/lua_module_lvgl/skills/lvgl_music_player/: SKILL.md
components/lua_modules/lua_module_lvgl/skills/lvgl_music_player/scripts/: lvgl_music_player.lua
components/lua_modules/lua_module_lvgl/src/: lua_lvgl_runtime.c
components/lua_modules/lua_module_storage/: CMakeLists.txt
components/lua_modules/lua_module_thread/: README.md
components/lua_modules/lua_module_vision/test/: camera_display_motion.lua
docs/src/content/docs/en/reference-cap/: index.mdx
docs/src/content/docs/en/reference-project/: boot-and-runtime.mdx  build-from-source.mdx
docs/src/content/docs/zh-cn/reference-cap/: index.mdx
docs/src/content/docs/zh-cn/reference-project/: boot-and-runtime.mdx  build-from-source.mdx
