
include("${CMAKE_BINARY_DIR}/config/sdkconfig.cmake" OPTIONAL)

set(app_claw_srcs
    "app_claw.c"
    "app_capabilities.c"
    "app_lua_modules.c"
)

set(app_claw_priv_requires
    cap_llm_config
    claw_cap
    claw_core
    claw_event_router
    claw_manager
    claw_skill
    freertos
)

if(CONFIG_APP_CLAW_ENABLE_CLI)
    list(APPEND app_claw_srcs "app_claw_cli.c")
    list(APPEND app_claw_priv_requires
        console
        json
    )
endif()

if(CONFIG_APP_CLAW_ENABLE_EMOTE)
    list(APPEND app_claw_priv_requires emote)
endif()

if(CONFIG_APP_CLAW_CAP_AGENT_MGR)
    list(APPEND app_claw_priv_requires cap_agent_mgr)
endif()

if(CONFIG_APP_CLAW_CAP_FILES)
    list(APPEND app_claw_priv_requires cap_files)
endif()

if(CONFIG_APP_CLAW_CAP_IM_FEISHU OR CONFIG_APP_CLAW_CAP_IM_QQ OR
        CONFIG_APP_CLAW_CAP_IM_TG OR CONFIG_APP_CLAW_CAP_IM_WECHAT)
    list(APPEND app_claw_priv_requires cap_im_platform)
endif()

if(CONFIG_APP_CLAW_CAP_IM_LOCAL)
    list(APPEND app_claw_priv_requires cap_im_local)
endif()

if(CONFIG_APP_CLAW_CAP_LLM_INSPECT)
    list(APPEND app_claw_priv_requires cap_llm_inspect)
endif()

if(CONFIG_APP_CLAW_CAP_LUA)
    list(APPEND app_claw_priv_requires cap_lua)
endif()

if(CONFIG_APP_CLAW_CAP_MCP_CLIENT)
    list(APPEND app_claw_priv_requires cap_mcp_client)
endif()

if(CONFIG_APP_CLAW_CAP_MCP_SERVER)
    list(APPEND app_claw_priv_requires cap_mcp_server)
endif()

if(CONFIG_APP_CLAW_CAP_ROUTER_MGR)
    list(APPEND app_claw_priv_requires cap_router_mgr)
endif()

if(CONFIG_APP_CLAW_CAP_SCHEDULER)
    list(APPEND app_claw_priv_requires cap_scheduler)
endif()

if(CONFIG_APP_CLAW_CAP_SESSION_MGR)
    list(APPEND app_claw_priv_requires cap_session_mgr)
endif()

if(CONFIG_APP_CLAW_CAP_SKILL_MGR)
    list(APPEND app_claw_priv_requires cap_skill_mgr)
endif()

if(CONFIG_APP_CLAW_CAP_SYSTEM)
    list(APPEND app_claw_priv_requires cap_system)
endif()

if(CONFIG_APP_CLAW_CAP_HTTP_REQUEST)
    list(APPEND app_claw_priv_requires cap_http_request)
endif()

if(CONFIG_APP_CLAW_CAP_WEB_SEARCH)
    list(APPEND app_claw_priv_requires cap_web_search)
endif()

if(CONFIG_APP_CLAW_CAP_MEMORY)
    list(APPEND app_claw_priv_requires claw_memory)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_DRIVER_ADC)
    list(APPEND app_claw_priv_requires lua_driver_adc)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_DRIVER_GPIO)
    list(APPEND app_claw_priv_requires lua_driver_gpio)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_DRIVER_I2C)
    list(APPEND app_claw_priv_requires lua_driver_i2c)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_DRIVER_MCPWM)
    list(APPEND app_claw_priv_requires lua_driver_mcpwm)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_DRIVER_PCNT)
    list(APPEND app_claw_priv_requires lua_driver_pcnt)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_DRIVER_RMT)
    list(APPEND app_claw_priv_requires lua_driver_rmt)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_DRIVER_TOUCH)
    list(APPEND app_claw_priv_requires lua_driver_touch)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_DRIVER_UART)
    list(APPEND app_claw_priv_requires lua_driver_uart)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_AUDIO AND
        CONFIG_ESP_BOARD_DEV_AUDIO_CODEC_SUPPORT)
    list(APPEND app_claw_priv_requires lua_module_audio)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_BOARD_MANAGER)
    list(APPEND app_claw_priv_requires lua_module_board_manager)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_BUTTON)
    list(APPEND app_claw_priv_requires lua_module_button)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_BLE)
    list(APPEND app_claw_priv_requires lua_module_ble)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_BLE_HID)
    list(APPEND app_claw_priv_requires lua_module_ble_hid)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_CAMERA AND
        CONFIG_ESP_BOARD_DEV_CAMERA_SUPPORT)
    list(APPEND app_claw_priv_requires lua_module_camera)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_CAPABILITY)
    list(APPEND app_claw_priv_requires lua_module_call_capability)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_DELAY)
    list(APPEND app_claw_priv_requires lua_module_delay)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_DISPLAY)
    list(APPEND app_claw_priv_requires lua_module_display)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_ENVIRONMENTAL_SENSOR)
    list(APPEND app_claw_priv_requires lua_module_environmental_sensor)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_EVENT_PUBLISHER)
    list(APPEND app_claw_priv_requires lua_module_event_publisher)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_HTTP_SERVER)
    list(APPEND app_claw_priv_requires lua_module_http_server)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_JSON)
    list(APPEND app_claw_priv_requires lua_module_json)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_IMAGE)
    list(APPEND app_claw_priv_requires lua_module_image)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_THREAD)
    list(APPEND app_claw_priv_requires lua_module_thread)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_IMU)
    list(APPEND app_claw_priv_requires lua_module_imu)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_IR)
    list(APPEND app_claw_priv_requires lua_module_ir)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_KNOB)
    list(APPEND app_claw_priv_requires lua_module_knob)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_LCD)
    list(APPEND app_claw_priv_requires lua_module_lcd)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_LCD_TOUCH AND
        CONFIG_ESP_BOARD_DEV_LCD_TOUCH_SUPPORT AND
        CONFIG_ESP_BOARD_DEV_LCD_TOUCH_SUB_I2C_SUPPORT)
    list(APPEND app_claw_priv_requires lua_module_lcd_touch)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_LED_STRIP)
    list(APPEND app_claw_priv_requires lua_module_led_strip)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_LVGL)
    list(APPEND app_claw_priv_requires lua_module_lvgl)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_MAGNETOMETER)
    list(APPEND app_claw_priv_requires lua_module_magnetometer)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_SCI)
    list(APPEND app_claw_priv_requires lua_module_sci)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_STORAGE)
    list(APPEND app_claw_priv_requires lua_module_storage)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_SYSTEM)
    list(APPEND app_claw_priv_requires lua_module_system)
endif()

if(CONFIG_APP_CLAW_CAP_LUA AND CONFIG_APP_CLAW_LUA_MODULE_VISION AND
        CONFIG_ESP_BOARD_DEV_CAMERA_SUPPORT)
    list(APPEND app_claw_priv_requires lua_module_vision)
endif()

idf_component_register(
    SRCS
        ${app_claw_srcs}
    INCLUDE_DIRS
        "include"
    PRIV_REQUIRES
        ${app_claw_priv_requires}
)
